map displaying on BarsIndex page

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WDI Project 4</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzgYF9jmDsTvV4d5y6slARNvEAM_v6tWE"></script>
   </head>
   <body>
     <div id="root"></div>
