--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WDI Project 4</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzgYF9jmDsTvV4d5y6slARNvEAM_v6tWE"></script>
   </head>
   <body>
