--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>WDI Project 4</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzgYF9jmDsTvV4d5y6slARNvEAM_v6tWE"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
